syntax = "proto3";

option java_multiple_files = true;
option java_package = "tomnolane.otus.killboss";

message NumberResponse{
  int32 value = 1;
}

message RangeRequest{
  int32 start = 1;
  int32 end = 2;
}

service KillBossService{
  rpc getNumbers(RangeRequest) returns (stream NumberResponse){}
}